--- a/writer/src/ru/flaswf/writer/Main.mxml
+++ b/writer/src/ru/flaswf/writer/Main.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
-               xmlns:mx="library://ns.adobe.com/flex/mx" width="800" height="500">
+               xmlns:mx="library://ns.adobe.com/flex/mx" width="800" height="300">
 
     <s:layout>
         <s:VerticalLayout/>
@@ -23,22 +23,6 @@
             <s:Button label="Browse" click="onBrowseOutput(event)"/>
         </s:FormItem>
 
-        <s:FormItem label="Recursive:">
-            <s:CheckBox id="recursiveCheckBox" selected="false"/>
-        </s:FormItem>
-
-        <s:FormItem label="Skip existing files:">
-            <s:CheckBox id="skipExistingFilesCheckBox" selected="false"/>
-        </s:FormItem>
-
-        <s:FormItem label="Scale:">
-            <s:TextInput id="scaleTextInput" text="1"/>
-        </s:FormItem>
-
-        <s:FormItem label="OverSize:">
-            <s:TextInput id="overSizeTextInput" text="1.3"/>
-        </s:FormItem>
-
         <s:Button id="okButton" label="OK" click="onClick(event)"/>
     </s:Form>
 
@@ -51,9 +35,6 @@
 
     <fx:Script><![CDATA[
         import spark.components.Alert;
-
-        private var scale:Number = 1;
-        private var overSize:Number = 1.3;
 
         private var swfFiles:Vector.<File>;
         private var loadFileIndex:int;
@@ -124,9 +105,6 @@
         }
 
         private function onClick(event:MouseEvent):void {
-            scale = parseFloat(scaleTextInput.text);
-            overSize = parseFloat(overSizeTextInput.text);
-
             var swfFolder:File = new File(swfFolderTextInput.text);
 
             swfFiles = new <File>[];
@@ -178,10 +156,10 @@
             var targetFileName:String = targetPath + "/" + file.name.substr(0, file.name.length - 4) + ".animation";
             var targetFile:File = new File(targetFileName);
 
-            if (skipExistingFilesCheckBox.selected && targetFile.exists) {
-                trace('================= Skip existing file ' + targetFileName + ' ====================');
-                finishFile();
-            } else {
+//           / if (targetFile.exists) {
+//                trace('================= Skip existing file ' + targetFileName + ' ====================');
+//                finishFile();
+//            } else {
                 var fs:FileStream = new FileStream();
                 fs.open(file, FileMode.READ);
                 var bytes:ByteArray = new ByteArray();
@@ -193,7 +171,7 @@
                 lc.allowCodeImport = true;
                 lc.allowLoadBytesCodeExecution = true;
                 loader.loadBytes(bytes, lc);
-            }
+//            }
         }
 
         private function onComplete(event:Event):void {
